<resources>
    <string name="app_name">Health Care</string>
    <string name="slide_1_title">Disease Detection</string>
    <string name="slide_1_desc">Explore the most common disease detection</string>
    <string name="slide_2_title">Primary Treatment</string>
    <string name="slide_2_desc">Explore the most common primary treatment </string>
    <string name="slide_3_title">Food Plan</string>
    <string name="slide_3_desc">Explore the most common food plan </string>
    <string name="slide_4_title">Pregnancy Care</string>
    <string name="slide_4_desc">Explore the most attractive pregnancy care</string>
    <string name="slide_5_title">Emergency Contacts</string>
    <string name="slide_5_desc">Explore the most common emergency contacts</string>
    <string name="my_preference">"com.collegeproject.dev3dot.projecthealthcare.Mypref"</string>
    <string name="my_preference_key">"com.collegeproject.dev3dot.projecthealthcare.MyprefKey"</string>
    <string name="ex_1">Ex: Fever over 100.4 F</string>
    <string name="ex_2">Ex: Sore throat</string>
    <string name="ex_3">Ex: Nasal congestion</string>
    <string name="button_next_food_plan">Next</string>
    <string-array name="treatmentName">
        <item>Fever</item>
        <item>Migraine</item>
        <item>Unconsciousness</item>
        <item>Throat Obstruction</item>
        <item>Stroke</item>
        <item>Fingertip Injuries</item>
        <item>Diarrhoea</item>
        <item>Drowning</item>
        <item>Snakebite</item>
    </string-array>
    <string-array name="foodName">
        <item>What to eat</item>
        <item>What not to eat</item>
        <item>Vitamins and minerals</item>
        <item>How much to eat</item>
        <item>Weight plan</item>
    </string-array>
    <string-array name="exerciseName">
        <item>General Tips</item>
        <item>Why exercise</item>
        <item>Exercise to avoid</item>
        <item>Enjoyable exercises</item>
        <item>Kegel Exercise</item>
    </string-array>
    <string-array name="labourName">
        <item>Preparing for labor</item>
        <item>Signs of labor</item>
        <item>Stages of labor</item>
        <item>Positions for labor</item>
        <item>Breathing</item>
        <item>Water births</item>
        <item>Natural birth</item>
        <item>Home birth</item>
        <item>Cesarean birth</item>

    </string-array>
    <string-array name="adviceName">
        <item>Staying Healthy During Pregnancy</item>
        <item>Take a Prenatal Vitamin</item>
        <item>Write a Birth Plan</item>
        <item>Educate Yourself</item>
        <item>Practice Kegels</item>
        <item>Change Up Chores</item>
        <item>Track Your Weight Gain</item>
        <item>Eat Folate-Rich Foods</item>
        <item>Recharge with Fruit</item>
        <item>Go Fish</item>
        <item>Fly Smart</item>
        <item>Know When to Call the Doctor</item>
        <item>Indulge Yourself</item>

    </string-array>
    <string-array name="primaryTreatmentDefination">

        <item>"When the temperature of the body is very high, ie above 98 degrees Fahrenheit, then we say that the condition of the body is fever.
            Fever is not a disease, it is expressed as a symptom of various diseases. However, high fever can be dangerous, especially in small children's fields.\n"</item>

        <item>Migraines are characterized by severe head pain often accompanied by other symptoms,
            which can be disabling in nature. These migraine symptoms include but are not limited to:
            nausea, vomiting, difficulty speaking, numbness or tingling, and sensitivity to light and sound.\n</item>

        <item>"Unconsciousness is when a person suddenly becomes unable to respond to stimuli and appears to be asleep.
            A person may be unconscious for a few seconds (fainting) or for longer periods of time.\n
            People who become unconscious don’t respond to loud sounds or shaking.\n"</item>

        <item>Do you every feel like you have a bump in your throat that interfering with your ability to swallow properly? If so,
            you probably suffer from a very common problem known as throat obstruction.
            There are different factors that could make you feel that there is a blockage or an obstruction in your throat.\n"</item>

        <item>A stroke, sometimes called a \"brain attack,\" occurs when blood flow to an area in the brain is cut off.\n"</item>

        <item>An amputation can result from slamming your finger in a car door or catching your ring on a hook or nail.</item>

        <item>Many people get diarrhea once or twice each year. It normally lasts 2 to 3 days, and you can treat it with over-the-counter
            medicines. Some people get it more often as part of irritable bowel syndrome (IBS) or other conditions.</item>

        <item>"Drowning is when someone is unable to breathe because their nose and mouth are submerged in water, or in another liquid.\n\n
             When someone's drowning, it may not look like the violent, splashing call for help that most people expect from watching TV.
            When someone’s actually drowning, they won’t able to make any noise, so can easily go unnoticed,
            even if friends or family are nearby.\n"</item>

        <item>"A snakebite is an injury caused by the bite of a snake, especially a venomous snake. A common symptom of a bite from a venomous
            snake is the presence of two puncture wounds from the animal's fangs\n"</item>
    </string-array>
    <string name="menstruation_length_label">Menstruation length</string>
    <string name="period_length_label">Period length</string>
    <string name="button_plus_label">+</string>
    <string name="button_minus_label">-</string>
    <string name="last_period_date_label">Last period date</string>
    <string name="pick_last_period_date">Set last period date</string>
    <string name="incoming_period_notification_label">Incoming period notification</string>
    <string name="fertile_days_notification_label">Fertile days notification</string>
    <string name="ovulation_notification_label">Ovulation Date</string>
    <string name="update_preferences">Update</string>
    <string name="clear_calendar">Clear calendar</string>
</resources>